banco recibidos y enviados

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,6 +1,5 @@
-<p>login works!</p>
 <section>
-    <input  [(ngModel)] placeholder="Email" Type="Email">;
-    <input  [(ngModel)] placeholder="Contraseña" type="password">;
-    <button (click)="validarLogin()" class="btn "></button>;
+    <input [( ngModel )] placeholder="Email" Type="Email">,
+    <input [( ngModel )] placeholder="Contraseña" type="password">,
+    <button (click)="validarLogin ()" class="btn"></button>;
 </section>
