--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,8 @@
     <li><a routerLink="/auth/login">Iniciar sesion</a></li>;
     <li><a routerLink="/pages/dashboard">Inicio</a></li>;
     <li><a routerLink="/pages/tranferencias-recibidas">Transferencias recibidas</a></li>;
+    <li><a routerLink="/pages/tranferencias-enviadas">Transferencias enviada</a></li>;
+
 
 
   </ul>
