--- a/src/app/pages/tranferencia-enviadas/tranferencia-enviadas.component.html
+++ b/src/app/pages/tranferencia-enviadas/tranferencia-enviadas.component.html
@@ -1,16 +1,3 @@
-<div class="fila-tabla , cabecera.tabla">
-    <div>
+<h1>Transferencias Enviadas</h1>
 
-    </div>
-
-</div>
-<article: class="fila-tabla" *ngFor=" let Transferencia of Transferencias">
-    <div>
-        {{transferencia.concepto}}
-    </div>
-    <div>
-        {{transferencia.importe| currency:'tuin'}}
-    </div>
-    <div>{{transferencia.fecha | date:'short'}}
-    </div>
-</article><p>tranferencia-enviadas works!</p>
+    <app-tabla-transferenciacias></app-tabla-transferenciacias>
