--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
-/* You can add global styles to this file, and also import other style files */
+*{
+    padding: 4%;
+    font-family: 'Times New Roman', Times, serif;
+    
+}
+body{
+    background-color: lime;
+    
+}
