--- a/src/app/componentes/tabla-transferencias/tabla-transferencias.component.html
+++ b/src/app/componentes/tabla-transferencias/tabla-transferencias.component.html
@@ -8,4 +8,16 @@
     <div> {{transferencia.concepto}} </div>
     <div> {{transferencia.importe| currency:'tuin'}} </div>
     <div>{{transferencia.fecha | date:'short'}} </div>
-    </article>
+</article>
+
+<div class="fila-tabla , cabecera.tabla">
+
+    <div>Concepto</div>
+    <div>Importe</div>
+    <div>Fecha</div>
+</div>
+<article: class="fila-tabla" *ngFor=" let Transferencia of Transferencias">
+    <div> {{transferencia.concepto}} </div>
+        <div> {{transferencia.importe| currency:'tuin'}} </div>
+        <div>{{transferencia.fecha | date:'short'}} </div>
+        </article>
