--- a/src/app/pages/tranferencia-enviadas/tranferencia-enviadas.component.html
+++ b/src/app/pages/tranferencia-enviadas/tranferencia-enviadas.component.html
@@ -1,3 +1,3 @@
 <h1>Transferencias Enviadas</h1>
 
-    <app-tabla-transferenciacias></app-tabla-transferenciacias>
+    <app-tabla-transferenciacias(transferencias)>'Transferencias'</app-tabla-transferenciacias>
